# kolminey

./: README.md
bass/: disk.py  fonts.py  requirements.txt  rnc_deco.py  rnccs.py  screen.py  screen_inject.py  texts.py  texts_reverse.py
dgds/: archive.py  fonts.py  graphics.py  graphics_override.py  iff.py  lzw.py  pyproject.toml  script.py  tim_levels.py  vqt.py
discworld/: lzss.py  merge-voice.py  merge.py  read_index.py  read_scn.py  split-voice.py  split.py  tinselnoir.py
kheops/: cryobf.py  requirements.txt  texts.py
mdk2/: strings.py  textpatch.py  voices.md
psychonauts/: fonts.py  fonts_inject.py  requirements.txt  texts.py
redguard/: fonts.py  grid.py  requirements.txt
sanitarium/: asylum.py  requirements.txt
tequilla/: font.py
tlj/: images.py  requirements.txt  speech.py  speech_inject.py  tlj_textpatch.py  xarc.py  xarc_inject.py  xmg.py
zvision/: graphics.py  requirements.txt  zfs.py
